--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="@dimen/dp60"
-        android:layout_height="@dimen/dp60"
+        android:layout_width="@dimen/dp120"
+        android:layout_height="wrap_content"
         android:background="#08ff86"
         android:text="TextView" />
 </LinearLayout>
