--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="@dimen/dp120"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp16"
         android:background="#08ff86"
         android:text="TextView" />
 </LinearLayout>
