--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,6 @@
             android:layout_width="wrap_content"
             android:layout_height="1000dp"
             android:background="#115863"
-            android:text="qweqweqweq" />
+            android:text="qweqweqweq新东方现场" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
