--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,6 @@
             android:layout_width="wrap_content"
             android:layout_height="1000dp"
             android:background="#115863"
-            android:text="qweq身为人父给对方发发发" />
+            android:text="qweq身为人父给对的广泛大概豆腐干的风格法国的风格大概的方发发发" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
